# api/openapi.yaml
@@ -916,6 +916,7 @@ components:
       enum:
         - AWS
         - Azure
+        - Docker
 
     Scans:
       type: object
@@ -1528,6 +1529,52 @@ components:
           type: string
       required:
         - objectType
+
+    ContainerInfo:
+      type: object
+      properties:
+        objectType:
+          type: string
+        containerName:
+          type: string
+        location:
+          type: string
+        # TODO(paralta) Check if image needs to be a required property
+        image:
+          $ref: '#/components/schemas/ContainerImageInfo' 
+        id:
+          type: string
+        createdAt:
+          type: string
+          format: date-time
+        labels:
+          type: array
+          items:
+            $ref: '#/components/schemas/Tag'
+          nullable: true
+      required:
+        - objectType
+
+    ContainerImageInfo:
+      type: object
+      properties:
+        objectType:
+          type: string
+        id:
+          type: string
+        labels:
+          type: array
+          items:
+            $ref: '#/components/schemas/Tag'
+          nullable: true
+        architecture:
+          type: string
+        os:
+          type: string
+        size:
+          type: integer
+      required:
+        - objectType 
 
     DirInfo:
       type: object
